# robotic_setups_description

abb_crb15000_5_95_moveit_config/: CMakeLists.txt  package.xml
abb_crb15000_5_95_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  planning_pipeline.launch.xml  (+4 more)
abb_crb15000_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
abb_crb15000_support/: CMakeLists.txt  package.xml
abb_fabtory/: CMakeLists.txt  package.xml
abb_fabtory_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
abb_irb6700_150_320/: CMakeLists.txt  package.xml
rbvogui_xl_ur10e_liftkit/: package.xml  rbvogui_xl_lift_ur10e.urdf
rbvogui_xl_ur10e_liftkit_indoor_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rbvogui_xl_ur10e_liftkit_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rbvogui_xl_ur20_liftkit/: CMakeLists.txt  package.xml
rbvogui_xl_ur20_liftkit/urdf/: rbvogui_xl_ur20_liftkit.urdf
rbvogui_xl_ur20_liftkit_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_e/: CMakeLists.txt  package.xml
ur10_e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_e_rot_limit/: CMakeLists.txt  package.xml
ur10_e_rot_limit_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_liftkit_700mm/: CMakeLists.txt  package.xml
ur10e_liftkit_700mm/launch/: ur10e_lift_700mm.launch
ur10e_liftkit_700mm/urdf/: ur10e_liftkit_700mm.urdf
ur10e_liftkit_700mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+145 files in other folders)
